# edu-subxt

./: Cargo.toml
res/: edu_chain_metadata.scale
src/: lib.rs
src/chain/: config.rs  extend.rs  metadata.rs  mod.rs
src/interface/: balances.rs  intake.rs  mod.rs  system.rs  university.rs
src/testing/: mod.rs
