[package]
name = "edu-subxt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
subxt = { version = "0.28.0", features = ["substrate-compat", "jsonrpsee-ws"] }
parity-scale-codec = { version = "3.4.0", features = ["derive"] }
async-trait = "*"
sp-core = { version = "20.0.0", default-features = false }

[dev-dependencies]
sp-keyring = { version = "23.0.0" }
